2003-08-24  Bruno Haible  <bruno@clisp.org>

	* error.c: Use <stdarg.h> when compiling with MSVC, even though it
	doesn't define __STDC__ by default.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	Support for building DLLs on Windows.
	* argmatch.h (argmatch_die): Add DLL_VARIABLE attribute.
	* backupfile.h (simple_backup_suffix): Likewise.
	* error.h (error_print_progname, error_message_count,
	error_one_per_line): Likewise.
	* error-progname.h (error_with_progname): Likewise.
	* getopt.h (optarg, optind, opterr, optopt): Likewise.
	* obstack.h (obstack_alloc_failed_handler, obstack_exit_failure):
	Likewise.
	* progname.h (program_name): Likewise.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* backupfile.h: Make this file includable in C++ mode: add extern "C".
	* basename.h: Likewise.
	* copy-file.h: Likewise.
	* error-progname.h: Likewise.
	* findprog.h: Likewise.
	* full-write.h: Likewise.
	* pathname.h: Likewise.
	* pipe.h: Likewise.
	* progname.h: Likewise.
	* relocatable.h: Likewise.
	* stpcpy.h: Likewise.
	* stpncpy.h: Likewise,
	* strcase.h: Likewise.
	* strstr.h: Likewise.
	* wait-process.h: Likewise.
	* xerror.h: Likewise.
	* xmalloc.h: Likewise.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* getline.h: Update from gnulib.
	* getline.c: Update from gnulib.
	* getndelim2.h: New file, from gnulib.
	* getndelim2.c: New file, from gnulib.
	* Makefile.am (LIBADD_SOURCE): Add getndelim2.h, getndelim2.c.
	* Makefile.msvc (OBJECTS): Add getndelim2.obj.
	(getndelim2.obj): New rule.
	* Makefile.vms (OBJECTS): Add getndelim2.obj.
	(getndelim2.obj): New rule.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* fnmatch_.h: Renamed from pfnmatch.h.
	* fnmatch.c: Renamed from pfnmatch.c.
	* Makefile.am (LIBADD_SOURCE): Remove pfnmatch.h, pfnmatch.c, add
	fnmatch.c.
	(EXTRA_DIST): Add fnmatch_.h.
	(all-local): Depend on fnmatch.h.
	(fnmatch.h): New rule.
	(MOSTLYCLEANFILES): Add fnmatch.h.
	* Makefile.msvc (OBJECTS): Remove pfnmatch.obj, add fnmatch.obj.