@@ -1,5 +1,10 @@
 2003-08-24  Bruno Haible  <bruno@clisp.org>
 
+	* binary-io.h: Include <stdio.h>, to avoid a compilation error when
+	MSVC7 <stdio.h> is included later.
+
+2003-08-24  Bruno Haible  <bruno@clisp.org>
+
 	* error.c: Use <stdarg.h> when compiling with MSVC, even though it
 	doesn't define __STDC__ by default.
 
